--- a/package.json
+++ b/package.json
@@ -11,27 +11,30 @@
   "author": "Christian Decker",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "babel-preset-es2015": "~6.18.0",
     "backbone": "~1.3.3",
+    "body-parser": "~1.15.2",
     "bootstrap": "^3.3.7",
+    "browserify-middleware": "~7.1.0",
+    "cookie-parser": "~1.4.3",
     "d3": "^4.3.0",
     "express": "~4.14.0",
-    "jquery": "~3.1.1",
-    "underscore": "~1.8.3",
-    "xml2js": "~0.4.17",
     "express-babelify-middleware": "~0.2.1",
-    "babel-preset-es2015": "~6.18.0",
-    "browserify-middleware": "~7.1.0",
-    "body-parser": "~1.15.2",
+    "express-session": "~1.15.0",
     "formidable": "~1.0.17",
+    "install": "^0.8.7",
+    "jquery": "~3.1.1",
+    "method-override": "~2.3.7",
+    "mkdirp": "~0.5.1",
     "mv": "~2.1.1",
     "nedb": "~1.8.0",
-    "mkdirp": "~0.5.1",
-    "cookie-parser": "~1.4.3",
-    "express-session": "~1.15.0",
-    "ws": "~1.1.1",
+    "npm": "^4.3.0",
     "ps-node": "~0.1.4",
+    "recursive-readdir": "^2.1.1",
     "tail": "~1.2.1",
-    "method-override": "~2.3.7"
+    "underscore": "~1.8.3",
+    "ws": "~1.1.1",
+    "xml2js": "~0.4.17"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
