--- a/package.json
+++ b/package.json
@@ -4,26 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "electron main.js",
-    "remote": "node main_remote.js",
+    "start": "node index.js",
     "build": "browserify public/js/main.js -t [ babelify --presets [ es2015 ] ] -o public/js/gadgetronBundleApp.js",
-    "dev-client": "npm run watch-js & npm run remote",
+    "dev-client": "npm run watch-js & npm run start",
     "dev-server": "nodemon index.js",
     "watch-js": "watchify public/js/main.js -t [ babelify --presets [ es2015 ] ] -o public/js/gadgetronBundleApp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Christian Decker, Thomas Kuestner",
-  "license": "Apache-2",
+  "author": "Christian Decker",
+  "license": "BSD-2-Clause",
   "dependencies": {
     "babel-preset-es2015": "~6.18.0",
     "backbone": "~1.3.3",
     "body-parser": "~1.15.2",
     "bootstrap": "^3.3.7",
-    "browserify-middleware": "~7.1.0",
     "cookie-parser": "~1.4.3",
     "d3": "^4.3.0",
     "express": "~4.14.0",
-    "express-babelify-middleware": "~0.2.1",
     "express-session": "~1.15.0",
     "formidable": "~1.0.17",
     "install": "^0.8.7",
@@ -41,9 +38,9 @@
     "xml2js": "~0.4.17"
   },
   "devDependencies": {
-    "electron": "^1.4.15",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-copy": "^1.0.0"
+    "grunt-contrib-copy": "^1.0.0",
+    "watchify": "^3.9.0"
   }
 }
