--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "electron main.js",
     "remote": "node index.js",
-    "build": "browserify public/js/main.js -t [ babelify --presets [ es2015 ] ] -o public/js/gadgetronBundleApp.js",
+    "build": "browserify public/js/backboneMain.js -t [ babelify --presets [ es2015 ] ] -o public/js/gadgetronBundleApp.js",
     "dev-client": "npm run watch-js & npm run remote",
     "dev-server": "nodemon index.js",
-    "watch-js": "watchify public/js/main.js -t [ babelify --presets [ es2015 ] ] -o public/js/gadgetronBundleApp.js",
+    "watch-js": "watchify public/js/backboneMain.js -t [ babelify --presets [ es2015 ] ] -o public/js/gadgetronBundleApp.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christian Decker, Thomas Kuestner",
