--- a/config.json
+++ b/config.json
@@ -5,6 +5,10 @@
     "upload_dir": "uploads",
     "result_dir": "public/results",
     "trash_dir": "trash",
+    "gadgetron_port": "9002",
+    "gadgetron_relay_host": "localhost",
+    "gadgetron_relay_port": "8002",
+    "gadgetron_rest_port": "9080",
     "gadgetron_log": "/tmp/gadgetron.log",
     "readers_db": "db/readers.db",
     "gadgets_db": "db/gadgets.db",
