--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browserify-middleware": "~7.1.0",
     "cookie-parser": "~1.4.3",
     "d3": "^4.3.0",
+    "dialog": "^0.2.0",
     "electron": "^1.4.15",
     "express": "~4.14.0",
     "express-babelify-middleware": "~0.2.1",
@@ -36,6 +37,7 @@
     "npm": "^4.3.0",
     "ps-node": "~0.1.4",
     "recursive-readdir": "^2.1.1",
+    "remote": "^0.2.6",
     "tail": "~1.2.1",
     "underscore": "~1.8.3",
     "ws": "~1.1.1",
