data viewer can now be selected in config.json closes #6

--- a/config.json
+++ b/config.json
@@ -15,5 +15,5 @@
     "writers_db": "db/writers.db",
     "admin_user": "admin",
     "password": "admin",
-    "viewer": "hdf"
+    "viewer": "hdfview"
 }
