--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "~1.15.2",
     "bootstrap": "^3.3.7",
     "browserify-middleware": "~7.1.0",
+    "command-exists": "^1.2.2",
     "cookie-parser": "~1.4.3",
     "d3": "^4.3.0",
     "dialog": "^0.2.0",
